--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
@@ -14,22 +14,54 @@
                     <li>портфолио</li>
                     <li>контакты</li>
         </ul>
-
-    <address>
+       <address>
         <ul>  
             <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-    </ul>
-    </address>
-    </nav>
-    </header>
-    <section>
-<h1>Эффективные решения</br> для вашего бизнеса</h1>
-<a chref="/">Заказать услугу</a>
+        </ul>
+        </address>
+        </nav>
+        </header>
+<section>
+        <h1>Эффективные решения</br> для вашего бизнеса</h1>
+        <a chref="/">Заказать услугу</a>
+</section>
+ 
+<section>
+        <h1><a href="/">Внимание к деталям</a></h1>
+        <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+         <h1><a href="/">Пунктуальность</a></h1>
+         <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>  
+         <h1><a href="/">Планирование</a></h1>
+         <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
+        <h1><a href="/">Современные технологии</a></h1>
+         <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
+</section>
+<section>
+    <header>
+<nav>
+<a href="/"> Чем мы занимаемся</a>
+</nav>
+<a>
+ <img src="./images/img (1).jpg"  alt="img">
+ <img src="./images/img (2).jpg"  alt="img">
+ <img src="./images/img (3).jpg"  alt="img">
+</a>
+</header>
+</section>
 
 
 
-    </section>
+    
+   
+
+
+
+
+
+
+
+
 
 </body>
 </html>
