--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"> WebStudio</a>
+           <h1> <a href="/">WebStudio</a></h1>
         </ul>
                     <li>студия</li>
                     <li>портфолио</li>
@@ -40,19 +40,21 @@
 <section>
     <header>
     <nav>
-    <a href="/"> Чем мы занимаемся</a>
+    <h1><a href="/"> Чем мы занимаемся</a></h1>
     </nav>
 <a>
- <img src="./images/img (1).png"  alt="img">
- <img src="./images/img (2).png"  alt="img">
- <img src="./images/img (3).png"  alt="img">
+    <ul>
+        <li><img src="./images/img (1).png"  alt="img"></li>
+         <li><img src="./images/img (2).png"  alt="img"></li>
+        <li><img src="./images/img (3).png"  alt="img"></li>
+    </ul>
 </a>
 </header>
 </section>
 <section>
     <header>
         <nav>
-            <a href="/">Наша команда</a>
+               <h1> <a href="/">Наша команда</a></h1>
         </nav>
 <a>
             <img src="./images/img (4).jpg"  alt="img">
@@ -78,7 +80,7 @@
 <footer>
  <section>
 <nav>
-<a href="/"> WebStudio</a>
+<h1><a href="/"> WebStudio</a></h1>
 </nav>
 <address>
     <ul>  
