--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <header>
+
         <nav>
            <h1> <a href="/">WebStudio</a></h1>
-        </ul>
+        <nav>
+           <ul>
                     <li>студия</li>
                     <li>портфолио</li>
                     <li>контакты</li>
+        
         </ul>
+    </nav>
        <address>
         <ul>  
             <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
         </address>
-        </nav>
-        </header>
 <section>
         <h1>Эффективные решения</br> для вашего бизнеса</h1>
         <a chref="/">Заказать услугу</a>
@@ -39,35 +40,31 @@
 </section>
 <section>
     <header>
-    <nav>
     <h1><a href="/"> Чем мы занимаемся</a></h1>
-    </nav>
 <a>
     <ul>
-        <li><img src="./images/img (1).png"  alt="img"></li>
-         <li><img src="./images/img (2).png"  alt="img"></li>
-        <li><img src="./images/img (3).png"  alt="img"></li>
+        <li><img src="./images/img (1).png"  width="370x294"alt="img"> </li>
+         <li><img src="./images/img (2).png" width="370x294" alt="img"></li> 
+        <li><img src="./images/img (3).png" width="370x294" alt="img"></li>
     </ul>
 </a>
 </header>
 </section>
 <section>
     <header>
-        <nav>
                <h1> <a href="/">Наша команда</a></h1>
-        </nav>
-<a>
-            <img src="./images/img (4).jpg"  alt="img">
+<a>   
+           <img src="./images/img (4).jpg" width="270x260" alt="img">
             <nul>
                 <li>Игорь Демьяненко</li>
                 <li>Produkt Designer</li>
-            <img src="./images/img (5).jpg"  alt="img">
+            <img src="./images/img (5).jpg" width="270x260" alt="img">
                 <li>Ольга Репина</li>
                 <li>Frontend Developer</li>
-            <img src="./images/img (6).jpg"  alt="img">
+            <img src="./images/img (6).jpg" width="270x260" alt="img">
                 <li>Николай Тарасов</li>
                 <li>Marceting</li>
-            <img src="./images/img (7).jpg"  alt="img">
+            <img src="./images/img (7).jpg" width="270x260" alt="img">
                 <li>Михаил Ермаков</li>
                 <li>UI Designer</li>
             </nul>
@@ -79,9 +76,7 @@
          
 <footer>
  <section>
-<nav>
 <h1><a href="/"> WebStudio</a></h1>
-</nav>
 <address>
     <ul>  
         <li><a href="г.Киев проспект Леси Украинки 26">г.Киев проспект Леси Украинки 26</a></li>
