Изменения тегов и атрибутов
В строке с57-80 изменен тег li в перечне фотографий на p и span.
В строке 27 убран тег br. а  h1  заменила на h2

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
     </nav>
        <address>
         <ul>  
-            <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </address>
 <section>
-        <h1>Эффективные решения</br> для вашего бизнеса</h1>
+        <h2>Эффективные решения для вашего бизнеса</h2>
         <a chref="/">Заказать услугу</a>
 </section>
  
 <section>
-        <h1><a href="/">Внимание к деталям</a></h1>
-        <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
+         <h1><a href="/">Внимание к деталям</a></h1>
+         <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
          <h1><a href="/">Пунктуальность</a></h1>
          <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>  
          <h1><a href="/">Планирование</a></h1>
          <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
-        <h1><a href="/">Современные технологии</a></h1>
+         <h1><a href="/">Современные технологии</a></h1>
          <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
 </section>
 <section>
-    <header>
+<header>
     <h1><a href="/"> Чем мы занимаемся</a></h1>
 <a>
     <ul>
@@ -53,22 +53,33 @@
 <section>
     <header>
                <h1> <a href="/">Наша команда</a></h1>
-<a>   
-           <img src="./images/img (4).jpg" width="270x260" alt="img">
-            <nul>
-                <li>Игорь Демьяненко</li>
-                <li>Produkt Designer</li>
-            <img src="./images/img (5).jpg" width="270x260" alt="img">
-                <li>Ольга Репина</li>
-                <li>Frontend Developer</li>
-            <img src="./images/img (6).jpg" width="270x260" alt="img">
-                <li>Николай Тарасов</li>
-                <li>Marceting</li>
-            <img src="./images/img (7).jpg" width="270x260" alt="img">
-                <li>Михаил Ермаков</li>
-                <li>UI Designer</li>
-            </nul>
-</a>
+<section>
+    <footer>
+        <ul>
+            <li>
+                <img src="./images/img (4).jpg" width="270x260" alt="img">
+                <p>Игорь Демьяненко</p>
+                <span>Produkt Designer</span>
+            </li> 
+            <li>
+                <img src="./images/img (5).jpg" width="270x260" alt="img">
+                <p>Ольга Репина</p>
+                <span>Frontend Developer</span>
+            </li>
+            <li>
+                <img src="./images/img (6).jpg" width="270x260" alt="img">
+                <p>Николай Тарасов</p>
+                <span>Marceting</span>
+            </li>
+            <li>
+                <img src="./images/img (7).jpg" width="270x260" alt="img">
+                <p>Михаил Ермаков</p>
+                <span>UI Designer</span>
+              </li>
+        </ul>
+    </footer>
+</section>   
+
 
         
     </header>
@@ -80,9 +91,10 @@
 <address>
     <ul>  
         <li><a href="г.Киев проспект Леси Украинки 26">г.Киев проспект Леси Украинки 26</a></li>
-        <li><a href="mailto: info@example.com">info@example.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 099 111 11 11</a></li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380961111111">+38 099 111 11 11</a></li>
     </ul>
+</address>
 </section>
 </footer>
 </body>
