--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 
 <section>
-        <h1>Эффективные решения</br>для вашего бизнеса</h1>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <a chref="">Заказать услугу</a>
 </section>
  
