--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 
 <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+        <h1>Эффективные решения для вашего бизнеса </h1>
         <a chref="">Заказать услугу</a>
 </section>
  
@@ -41,12 +41,9 @@
 <section>
     <h1><a href="/"> Чем мы занимаемся</a></h1>
     <ul>
-        <li><img src="./images/img (1).png"  alt="Написание кода"
-            width="370" /> </li>
-         <li><img src="./images/img (2).png"  alt="Работа за компьютером"
-            width="370"/></li> 
-        <li><img src="./images/img (3).png" alt="работа на планшете"
-            width="370"/></li>
+        <li><img src="./images/img (1).png" alt="Написание кода"width="370"/></li>
+         <li><img src="./images/img (2).png"  alt="Работа за компьютером"width="370"/></li> 
+        <li><img src="./images/img (3).png" alt="работа на планшете"width="370"/></li>
     </ul>
 </section>
 <section>
@@ -56,8 +53,7 @@
             <li>
                 <figure>
                 <figcaption>
-                                <img src="./images/img (4).jpg"  alt="Мужчина в очках"
-                                 width="270"/>
+                                <img src="./images/img (4).jpg"  alt="Мужчина в очках"width="270"/>
                                 <p>Игорь Демьяненко</p>
                                 <span>Produkt Designer</span>
                     </figcaption> 
@@ -67,8 +63,7 @@
             <li>
                 <figure>
                 <figcaption>
-                                    <img src="./images/img (5).jpg"  alt="Девушка в деловом костюме" 
-                                    width="270"/>
+                                    <img src="./images/img (5).jpg"  alt="Девушка в деловом костюме" width="270"/>
                                     <p>Ольга Репина</p>
                                     <span>Frontend Developer</span>
                          </figcaption> 
@@ -78,8 +73,7 @@
             <li>
                 <figure>
                     <figcaption>
-                                <img src="./images/img (6).jpg"  alt="Парень в рубашке"
-                                width="270"/>
+                                <img src="./images/img (6).jpg"  alt="Парень в рубашке"width="270"/>
                                 <p>Николай Тарасов</p>
                                 <span>Marceting</span>
                     </figcaption> 
@@ -89,8 +83,7 @@
             <li>
                 <figure>
                     <figcaption>
-                                <img src="./images/img (7).jpg"  alt="Парень в черной футболке и очках"
-                                width="270"/>
+                                <img src="./images/img (7).jpg"  alt="Парень в черной футболке и очках"width="270"/>
                                 <p>Михаил Ермаков</p>
                                 <span>UI Designer</span>
                     </figcaption> 
@@ -104,7 +97,7 @@
                 <a href="/"> WebStudio</a>
 <address>
     <ul>  
-                <li><a href="г.Киев проспект Леси Украинки 26">г.Киев проспект Леси Украинки 26</a></li>
+                <li><a href="г.КиевпроспектЛесиУкраинки26">г.Киев проспект Леси Украинки 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380961111111">+38 099 111 11 11 </a></li>
     </ul>
