--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <section>
         <h1>Эффективные решения для вашего бизнеса </h1>
-        <a chref="">Заказать услугу</a>
+        <a href="">Заказать услугу</a>
 </section>
  
 <section>
@@ -41,9 +41,9 @@
 <section>
     <h1><a href="/"> Чем мы занимаемся</a></h1>
     <ul>
-        <li><img src="./images/img (1).png" alt="Написание кода"width="370"/></li>
-         <li><img src="./images/img (2).png"  alt="Работа за компьютером"width="370"/></li> 
-        <li><img src="./images/img (3).png" alt="работа на планшете"width="370"/></li>
+        <li><img src="./images/img(1).png" alt="Написание кода" width="370"/></li>
+         <li><img src="./images/img(2).png"  alt="Работа за компьютером" width="370"/></li> 
+        <li><img src="./images/img(3).png" alt="Pабота на планшете" width="370"/></li>
     </ul>
 </section>
 <section>
@@ -53,7 +53,7 @@
             <li>
                 <figure>
                 <figcaption>
-                                <img src="./images/img (4).jpg"  alt="Мужчина в очках"width="270"/>
+                                <img src="./images/img(4).jpg"  alt="Мужчина в очках" width="270"/>
                                 <p>Игорь Демьяненко</p>
                                 <span>Produkt Designer</span>
                     </figcaption> 
@@ -63,7 +63,7 @@
             <li>
                 <figure>
                 <figcaption>
-                                    <img src="./images/img (5).jpg"  alt="Девушка в деловом костюме" width="270"/>
+                                    <img src="./images/img(5).jpg"  alt="Девушка в деловом костюме" width="270"/>
                                     <p>Ольга Репина</p>
                                     <span>Frontend Developer</span>
                          </figcaption> 
@@ -73,7 +73,7 @@
             <li>
                 <figure>
                     <figcaption>
-                                <img src="./images/img (6).jpg"  alt="Парень в рубашке"width="270"/>
+                                <img src="./images/img(6).jpg"  alt="Парень в рубашке" width="270"/>
                                 <p>Николай Тарасов</p>
                                 <span>Marceting</span>
                     </figcaption> 
@@ -83,7 +83,7 @@
             <li>
                 <figure>
                     <figcaption>
-                                <img src="./images/img (7).jpg"  alt="Парень в черной футболке и очках"width="270"/>
+                                <img src="./images/img(7).jpg"  alt="Парень в черной футболке и очках" width="270"/>
                                 <p>Михаил Ермаков</p>
                                 <span>UI Designer</span>
                     </figcaption> 
