--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    
 </head>
 <body>
 <header>
     <nav>
            <a href="/">WebStudio</a>
            <ul>
-                    <li>студия</li>
-                    <li>портфолио</li>
-                    <li>контакты</li>
+                    <li><a href="/">студия</a></li>
+                    <li><a href="./portfolio.html">портфолио</a></li>
+                    <li><a href="/">контакты</a></li>
            </ul>
     <address>
     <ul>  
@@ -97,7 +98,7 @@
                 <a href="/"> WebStudio</a>
 <address>
     <ul>  
-                <li><a href="г.КиевпроспектЛесиУкраинки26">г.Киев проспект Леси Украинки 26</a></li>
+                <li><a href="https://goo.gl/maps/hNrYHoQ85PdMvzjz7">г.Киев проспект Леси Украинки 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380961111111">+38 099 111 11 11 </a></li>
     </ul>
